# Aura

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build-cli.py  build-gui-nuitka.py  build-gui-pyinstaller.py  build-gui.py  main.py  pyproject.toml
.github/workflows/: build-windows.yml  release-windows.yml  testing.yml
cli/: main.py
core/: config.py  download_manager.py  engine.py  interface.py  logger.py  models.py  scrapper.py
gui/: README.md
gui/src/: main.py
src/: main.py
tests/: download-gui-test.py  integration_test.py  test_config.py  test_core_interface.py  test_download_manager.py  test_download_manager_no_qt.py
