[project]
name = "aura"
version = "0.0.1"
description = "A modular, stealthy Python scraper for AnimeHeaven.me with CLI and GUI interfaces. Built with Playwright and managed with UV. Designed to extract direct download links for anime episodes without triggering bot detection or wasting bandwidth on video streaming."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Chandima Prabhath", email = "chandimaprabath.it@gmail.com" }
]
dependencies = [
    "flet[all]>=0.80.1",
    "playwright>=1.57.0",
]

[project.scripts]
aura-gui = "gui.src.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["core", "cli", "gui"]

[tool.flet]
org = "com.mycompany"
product = "aura"
company = "Flet"
copyright = "Copyright (C) 2026"

[tool.flet.app]
path = "gui/src"