[project]
name = "Aura"
version = "0.0.1"
description = "A stealthy Python scraper for **AnimeHeaven.me** built with Playwright and managed with UV. Designed to extract direct download links for anime episodes without triggering bot detection or wasting bandwidth on video streaming."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Chandima Prabhath", email = "chandimaprabath.it@gmail.com" }
]
dependencies = [
  "pyqt6>=6.6.0",
  "playwright>=1.57.0",
  "nuitka>=2.8.9",
]

[dependency-groups]
dev = [
  "nuitka>=2.8.9",
  "ordered-set>=4.1.0",
  "pyinstaller>=6.17.0",
  "pytest>=7.0.0",
  "zstandard>=0.25.0",
]
