[project]
name = "Aura"
version = "0.0.2-beta"
description = "A stealthy Python scraper for **AnimeHeaven.me** built with Playwright and managed with UV. Designed to extract direct download links for anime episodes without triggering bot detection or wasting bandwidth on video streaming."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Chandima Prabhath", email = "chandimaprabath.it@gmail.com" }
]
dependencies = [
  "pyqt6>=6.6.0",
  "playwright>=1.57.0",
  "pysmartdl2>=2.0.2",
  "textual>=7.1.0",
  "pyperclip>=1.11.0",
]

[dependency-groups]
dev = [
  "pillow>=12.1.0",
  "pyinstaller>=6.17.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=1.3.0",
]
